gnome-shell (3.6.2-2) UNRELEASED; urgency=low

  * Recommend gkbd-capplet for gkbd-keyboard-display. Closes: #691731.

 -- Josselin Mouette <joss@debian.org>  Sat, 24 Nov 2012 13:31:12 +0100

gnome-shell (3.6.2-1) experimental; urgency=low

  [ Simon McVittie ]
  * Increase libsoup dependency to 2.40, needed when installing extensions
    from extensions.gnome.org (Closes: #691324)
  * Recommend unzip, also for extensions.gnome.org (Closes: #680978)

  [ Josselin Mouette ]
  * Remove gdm3 dependency. Break versions < 3.5 instead.

  [ Sjoerd Simons ]
  * New upstream release (3.6.2)
  * d/p/telepathyClient-Fix-auto-scroll-to-bottom.patch:
    + Removed. Fixed upstream

 -- Sjoerd Simons <sjoerd@debian.org>  Sat, 17 Nov 2012 13:44:33 +0100

gnome-shell (3.6.1-3) experimental; urgency=low

  * debian/rules: Depends on 3.6 versions of gir1.2-gnomebluetooth-1.0 and
    gir1.2-gnomedesktop-3.0 
  * debian/rules: Add dependency on evolution-data-server (Closes: #690554)
  * debian/rules: Depend on gir1.2-telepathylogger-0.2 >= 0.4.0-2 to get the
    annotation updates needed by gnome-shell
  * debian/rules: gir1.2-ibus-1.0 (> 1.4.99) needed for
    the ibus related functionality
  * debian/patches/telepathyClient-Fix-auto-scroll-to-bottom.patch:
    + Added. Fix auto-scroll down in the builtin telepathy message view (bgo:
      #686571)

 -- Sjoerd Simons <sjoerd@debian.org>  Sun, 21 Oct 2012 14:50:16 +0200

gnome-shell (3.6.1-2) experimental; urgency=low

  * d/p/30-remoteMenu-Prevent-the-shell-from-becoming-unrespons.patch:
    - Added, prevent gnome-shell from become unresponsive (bgo: #686502)

 -- Sjoerd Simons <sjoerd@debian.org>  Sat, 20 Oct 2012 01:17:07 +0200

gnome-shell (3.6.1-1) experimental; urgency=low

  * New upstream release
  * d/p/28-ShellUserVerifier-fix-typo-in-function-name-caught-o.patch:
    - Removed, fixed upstream

 -- Sjoerd Simons <sjoerd@debian.org>  Wed, 17 Oct 2012 21:01:15 +0200

gnome-shell (3.6.0-1) experimental; urgency=low
