@@ -32,7 +32,7 @@ Build-Depends: autotools-dev,
                libgstreamer1.0-dev (>= 0.11.92),
                libgtk-3-dev (>= 3.3.9),
                libibus-1.0-dev,
-               libmutter-dev (>= 3.6.1),
+               libmutter-dev (>= 3.6.2),
                libnm-glib-dev (>= 0.9) [linux-any],
                libnm-glib-vpn-dev (>= 0.9) [linux-any],
                libnm-util-dev (>= 0.9) [linux-any],
@@ -73,7 +73,7 @@ Depends: ${gir:Depends},
          gir1.2-gnomedesktop-3.0 (>= 3.6.1),
          gir1.2-gtk-3.0,
          gir1.2-ibus-1.0 (>= 1.4.99),
-         gir1.2-mutter-3.0 (>= 3.5.92),
+         gir1.2-mutter-3.0 (>= 3.6.2),
          gir1.2-networkmanager-1.0 [linux-any],
          gir1.2-pango-1.0,
          gir1.2-polkit-1.0,
@@ -88,7 +88,7 @@ Depends: ${gir:Depends},
          gsettings-desktop-schemas (>= 3.5.4),
          python (>= 2.6),
          telepathy-mission-control-5,
-         evolution-data-server
+         evolution-data-server (>= 3.6.0),
 Recommends: gnome-contacts,
             gnome-control-center,
             gnome-session-fallback,
