@@ -1,6 +1,10 @@
 gnome-shell (3.6.2-2) UNRELEASED; urgency=low
 
+  [ Josselin Mouette ]
   * Recommend gkbd-capplet for gkbd-keyboard-display. Closes: #691731.
+
+  [ Jeremy Bicha ]
+  * debian/control.in: Bump minimum mutter & eds depends
 
  -- Josselin Mouette <joss@debian.org>  Sat, 24 Nov 2012 13:31:12 +0100
 
